# jansori-assistant

./: .env.example  .pre-commit-config.yaml  AGENTS.md  LICENSE  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/: pull_request_template.md
adapters/: dummy.py
adapters/telegram/: bot.py  fallbacks.py  handlers.py
alembic/: env.py
alembic/versions/: 0001_create_messages.py
core/: adapter.py  logging.py  router.py
core/db/: engine.py  models.py
docs/: architecture.md  overview.md  roadmap.md
docs/roadmap_phases/: phase-0-foundation.md
integration_tests/: conftest.py  test_telegram_to_db.py
integration_tests/db/: test_smoke.py
interfaces/telegram/: bot.py  fallbacks.py  handlers.py
tests/adapters/: test_dummy.py
tests/adapters/telegram/: test_fallbacks.py  test_handlers.py
tests/core/: test_logging.py  test_router.py
tests/interfaces/telegram/: test_fallbacks.py  test_handlers.py
