[project]
name = "jansori-assistant"
version = "0.1.0"
description = "AI-powered personal assistant focused on habit management and daily accountability"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-telegram-bot>=21,<22",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["interfaces*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
