[project]
name = "jansori-assistant"
version = "0.1.0"
description = "AI-powered personal assistant focused on habit management and daily accountability"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-telegram-bot>=21,<22",
    "python-dotenv>=1.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "pre-commit>=3.7",
    "testcontainers[postgres]>=4",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["core*", "adapters*", "skills*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
